# usb_video_device_capture

./: .gitignore  readme.md
doc/: design.pptx
src/: CMakeLists.txt
src/main/: CMakeLists.txt  audiocapturecallback.cpp  audiodevicemanager.cpp  audiodevicemanager.h  audiooutputdevicemanager.cpp  audiooutputdevicemanager.h  capture_texture.cpp  capture_texture.h  captureengineaudiocallback.cpp  captureengineaudiocallback.h  captureenginesamplecallback.cpp  captureenginesamplecallback.h  captureenginevideocallback.cpp  captureenginevideocallback.h  capturemanager.cpp  capturemanager.h  common.fxh  dx11base.cpp  dx11base.h  dx11baserenderer.cpp  dx11baserenderer.h  dx11manager.cpp  dx11manager.h  dx11nv12renderer.cpp  dx11nv12renderer.h  dx11rgb32renderer.cpp  dx11rgb32renderer.h  dx11yuy2renderer.cpp  dx11yuy2renderer.h  dxhelper.h  main.cpp  mainapp.cpp  mainapp.h  mesh.cpp  mesh.h  mfutility.h  pipeline.cpp  pipeline.h  stdafx.h  texture.cpp  (+16 more)
test/01_getDeviceList/: getDeviceList.sln  readme.md
test/01_getDeviceList/src/: getDeviceList.vcxproj
test/02_study_implementation/src/: captureenginesamplecallback.cpp  captureenginesamplecallback.h  capturemanager.cpp  capturemanager.h  main.cpp  stdafx.h  study_impl.vcxproj  study_impl.vcxproj.filters  utils.h
test/03_messagehandler/: messagehandler.sln
test/03_messagehandler/src/: main.cpp  messagehandler.vcxproj  messagehandler.vcxproj.filters  stdafx.h
test/04_usbCap_rgb/: CMakeLists.txt
test/04_usbCap_rgb/main/: capture_texture.cpp  dxhelper.h  mainapp.h  mesh.h  pipeline.cpp  texture.h  timer.h  videoPS.h  videoPS.hlsl  videoVS.h
test/05_getDeviceInfo/: CMakeLists.txt
test/05_getDeviceInfo/main/: CMakeLists.txt  MFUtility.h  devicesinfo.cpp  devicesinfo.h  main.cpp
test/06_getCameraImages/: CMakeLists.txt
test/06_getCameraImages/main/: CMakeLists.txt  main.cpp
test/07_cap2Qimages/: CMakeLists.txt
test/07_cap2Qimages/main/: CMakeLists.txt  devicecommon.h  devicesinfo.cpp  devicesinfo.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.qrc  mainwindow.ui
test/08_usbCap_cui/: CMakeLists.txt
test/08_usbCap_cui/main/: CMakeLists.txt  MFUtility.h  capture_texture.cpp  capture_texture.h  clock.h  devicecommon.h  devicesinfo.cpp  devicesinfo.h  main.cpp  mainapp.cpp  mainapp.h  mainwindow.cpp  mainwindow.h  texture.cpp
test/09_mf_minimum_get_info/: mf_minimum_get_info.sln
test/09_mf_minimum_get_info/mf_minimum_get_info/: mf_minimum_get_info.cpp  mf_minimum_get_info.vcxproj  mf_minimum_get_info.vcxproj.filters
test/10_webCamCap_cui_d3drenderer/: CMakeLists.txt
test/10_webCamCap_cui_d3drenderer/main/: CMakeLists.txt  MFUtility.h  capturerenderer.cpp  capturerenderer.h  devicesinfo.cpp  devicesinfo.h  main.cpp  mainwindow.cpp  mainwindow.h
test/11_study_sink/: CMakeLists.txt  study_impl.sln
test/11_study_sink/main/: CMakeLists.txt  captureenginesamplecallback.cpp  capturemanager.cpp  capturemanager.h  dx11manager.cpp  dx11manager.h  main.cpp  mesh.h  pipeline.cpp  utils.h  videoPS.hlsl  win32messagehandler.cpp
test/11_study_sink/src/: capturemanager.cpp  dx11manager.cpp  dx11manager.h  main.cpp  pipeline.h  stdafx.h  study_impl.vcxproj  study_impl.vcxproj.filters  videoVS.hlsl  win32messagehandler.cpp  win32messagehandler.h
test/12_study_mft/: CMakeLists.txt
test/12_study_mft/main/: captureenginesamplecallback.cpp  common.fxh
test/12_use_readsample/: CMakeLists.txt
test/12_use_readsample/main/: capturemanager.cpp  capturemanager.h  dx11manager.cpp  dx11manager.h  main.cpp  stdafx.h  timer.h  utils.h  videocapturecallback.cpp  videocapturecallback.h  win32messagehandler.h
test/13_study_mft/: CMakeLists.txt
test/13_study_mft/main/: CMakeLists.txt  finddecoder.cpp  finddecoder.h  finddecoderex.cpp  finddecoderex.h  main.cpp  stdafx.h  utils.h
test/14_audio_readsample/: CMakeLists.txt
test/14_audio_readsample/main/: CMakeLists.txt  audiocapturecallback.cpp  audiocapturecallback.h  audiocapturemanager.cpp  audiocapturemanager.h  audiooutputdevicemanager.h  capturemanager.cpp  capturemanager.h  main.cpp  stdafx.h  utils.h  videocapturecallback.h
test/15_decode_h264/: CMakeLists.txt
test/15_decode_h264/main/: capturemanager.h  dx11manager.cpp  videocapturecallback.cpp  videocapturecallback.h
test/16_use_decoderMFT/main/: dx11manager.cpp  dxhelper.h  mesh.cpp  stdafx.h  videocapturecallback.cpp
test/17_nv12_colorspace/01_double_srv/main/: audiocapturecallback.cpp  dx11manager.cpp  dx11manager.h  main.cpp  pipeline.cpp  videoPS.hlsl  videocapturecallback.h
test/_ref/CaptureEngineVideoCapture/cpp/: Capture.cpp  Capture.h  CaptureEngine.sln  PreviewWnd.cpp
